refactoring to use more accurate response when there is no interest details stored in DB